2005-07-28  Owen Taylor  <otaylor@redhat.com>

	* configure.in Makefile.am: Skip tests/ directory if
	libpng was disabled. (#3423, reported by Steve Chaplin)

2005-07-28  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c: (read_png),
	(cairo_image_surface_create_from_png): Fix so that one of three
	different error status values will be returned:

		CAIRO_STATUS_NO_MEMORY
		CAIRO_STATUS_FILE_NOT_FOUND
		CAIRO_STATUS_READ_ERROR

	* src/cairo.h:
	* src/cairo.c: (cairo_status_to_string): Add new
	CAIRO_STATUS_FILE_NOT_FOUND.

	* src/cairoint.h:
	* src/cairo-surface.c: Add new _cairo_surface_nil_read_error and
	_cairo_surface_nil_file_not_found.

	* test/create-from-png.c: (draw): Test the new FILE_NOT_FOUND
	error.

2005-07-28  Stuart Parmenter  <pavlov@pavlov.net>

	* src/cairo-win32-font.c
	* src/cairo-win32-surface.c
	Use surface->base.status instead of just surface on
	cairo_win32_surface_t *s

2005-07-28  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Disable PS surface build if no freetype.

2005-07-28  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-win32-font.c (_draw_glyphs_on_surface): Pass
	-1 not 1 to RestoreDC to restore to the last SaveDC.
	(#3905, Stuart Parmenter)

2005-07-16  Owen Taylor  <otaylor@redhat.com>

        Patch from Martin Kretzschmar <martink@gnome.org>, #3798
 
 	* src/cairo-xlib-surface.c (_get_image_surface): prevent
 	sign-extension of masks.*_mask on 64bit architectures.
 	
	* src/cairo-xcb-surface.c (_get_image_surface): ditto.
	
2005-07-28  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-image-surface.c (_cairo_image_surface_acquire_source,dest_image) 
	src/cairo-quartz-surface.c (_cairo_quartz_surface_acquire_dest_image)
	src/cairo-xcb-surface.c (_cairo_xcb_surface_acquire_source,dest_image): 
	src/cairo-xlib-surface.c (_cairo_xlib_surface_acquire_source,dest_image): 
	Set image_extra to NULL to avoid purify warnings. (#3777, Stuart Parmenter)

2005-07-27  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: